force-app/main/default/objects/OPP_News_Coin__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Read</fullName>
                </value>
                <value>
                    <fullName>Like</fullName>
                </value>
                <value>
                    <fullName>Vote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coin__c</fullName>
        <label>Coin</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <formula>User__r.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OPP_News__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OPP News</label>
        <referenceTo>OPP_News__c</referenceTo>
        <relationshipLabel>OPP News Coin</relationshipLabel>
        <relationshipName>OPP_News_Coin</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <formula>User__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OPP_News_Coin</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>OPP News Coin</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Coin__c</columns>
        <columns>OPP_News__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}.{000000}</displayFormat>
        <label>OPP News Coin Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>